[project]
name = "oi"
version = "0.1.0"
description = "MP Discord Bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "davey>=0.1.3",
    "discord-ext-menus",
    "discord-py>=2.7.0",
    "humanize>=4.15.0",
    "jishaku>=2.6.3",
    "psutil>=7.2.2",
    "pytz>=2025.2",
    "rapidfuzz>=3.14.3",
    "toml>=0.10.2",
    "topggpy",
    "waifuim>=1.1.1",
    "wavelink>=3.4.1",
]

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
topggpy = { git = "https://github.com/null8626/python-sdk", rev = "7e97f8386d0ffff8639e19a5027a7ac7e53de45f" }
wavelink = { git = "https://github.com/atefcodes/Wavelink" }

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
exclude = [".venv"]
line-length = 125

[tool.ruff.lint]
select = [
    "ASYNC",
    "C4",
    "E",
    "F",
    "FA",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PL",
    "RET",
    "RUF",
    "SIM",
    "T20",
    "TID",
    "TRY",
]
ignore = [
    "F403",
    "F405",
    "N804",    # pylance already does it
    "PLC0414",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "SIM105",
    "TRY003",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
